welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:18: error: not found: value case_=>
  case_=> danse=false
  ^